# fuelcheck-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROVIDER.md  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  exit_codes.rs  lib.rs  logger.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  errors.rs  lib.rs  model.rs  service.rs
core/src/providers/: amp.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains.rs  kimi.rs  kimi_k2.rs  kiro.rs  minimax.rs  mod.rs  opencode.rs  vertexai.rs  warp.rs  zai.rs
core/src/reports/: mod.rs  types.rs
src/: accounts.rs  cli.rs  config.rs  errors.rs  main.rs  model.rs  tui.rs
src/providers/: amp.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains.rs  kimi.rs  kimi_k2.rs  kiro.rs  minimax.rs  mod.rs  opencode.rs  utils.rs  vertexai.rs  warp.rs  zai.rs
src/reports/: codex.rs  mod.rs  render.rs  types.rs
ui/: Cargo.toml
ui/src/: lib.rs  reports.rs  text.rs  tui.rs
