[package]
name = "fuelcheck-core"
version = "0.1.0"
edition = "2024"
description = "Core provider and reporting logic for fuelcheck"
license = "MIT"
repository = "https://github.com/chasebuild/fuelcheck-cli"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
directories = { workspace = true }
globwalk = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
