[package]
name = "fuelcheck-ui"
version = "0.1.0"
edition = "2024"
description = "UI renderers for fuelcheck"
license = "MIT"
repository = "https://github.com/chasebuild/fuelcheck-cli"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
fuelcheck-core = { path = "../core" }
